# ahp-cli

./: CMakeLists.txt  README.md  college.yaml  input.txt
include/: ahp.h  matrix.h  repl.h
src/: ahp.cpp  main.cpp  matrix.cpp  repl.cpp
